--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 header {
     display: flex;
     justify-content: space-between;
@@ -61,4 +63,42 @@ div {
 #button:hover{
     transform: scale(1.10);
     background-color: #FFB703;
+}
+
+section {
+    position: absolute;
+    width: 460px;
+    height: 145px;
+    left: 91px;
+    top: 196px;
+    background-color: #3A4042;
+    box-shadow: 5px 5px 0 #000;
+}
+
+.main_title{
+    font-family: 'Press Start 2P', monospace;
+    text-shadow: 3px 3px 0 #000;
+}
+
+#name {
+    position: absolute;
+    width: 450px;
+    height:30px;
+    left: 18px;
+    top: 24px;
+    color: #219ebc;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+#sub {
+    position: absolute;
+    width: 540px;
+    height: 30px;
+    top: 65px;
+    left: 60px;
+    color: #fff;
+    font-weight: 400;
+    font-size: 20px;
 }
