--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,4 +1,13 @@
-.main_title{
+h1 {
     font-family: 'Press Start 2P', monospace;
     text-shadow: 3px 3px 0 #000;
+    position: absolute;
+    width: 450px;
+    height:30px;
+    left: 18px;
+    top: 24px;
+    color: #219ebc;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 20px;
 }
