--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    background-color: #219ebc;
+    background-color: #3C96CA;
     border-bottom: 10px solid #000;
     padding: 10px 20px;
 }
@@ -38,29 +38,23 @@ a::before {
 }
 
 span {
-   
+
     background-color: #F25A70;
     width: 10px;
     height: 10px;
     margin-right: 10px;
-    
-}
 
-div {
-    display: inline-block;
-    background-color: yellow;
-    width: 100%;
 }
 
 #button {
     display: inline-block;
-    background-color: #023047;
+    background-color: #16374A;
     padding: 20px 18px;
     box-shadow: 5px 5px 0 #000;
     transition: transform 200ms linear;
 }
 
-#button:hover{
+#button:hover {
     transform: scale(1.10);
     background-color: #FFB703;
 }
@@ -75,22 +69,6 @@ section {
     box-shadow: 5px 5px 0 #000;
 }
 
-.main_title{
-    font-family: 'Press Start 2P', monospace;
-    text-shadow: 3px 3px 0 #000;
-}
-
-#name {
-    position: absolute;
-    width: 450px;
-    height:30px;
-    left: 18px;
-    top: 24px;
-    color: #219ebc;
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 20px;
-}
 
 #sub {
     position: absolute;
@@ -98,7 +76,27 @@ section {
     height: 30px;
     top: 65px;
     left: 60px;
-    color: #fff;
+    color: #FFB703;
     font-weight: 400;
     font-size: 20px;
+}
+
+main>a {
+    position: absolute;
+}
+
+.download {
+    top: 360px;
+    left: 120px;
+}
+
+.contatos {
+    top: 360px;
+    left: 380px;
+}
+
+.banner {
+    background-color: #2D7096;
+    width: 1440px;
+    height: 807px;
 }
